<resources>
    <string name="app_name">SPEED CALCULATOR</string>
    <string name="enter_distance_meter">Enter distance (meter)</string>
    <string name="enter_time_second">Enter Time (Second)</string>
    <string name="cear">CEAR</string>
    <string name="calcurator">CALCURATOR</string>
    <string name="average_speed_km_h">Average Speed (km/h)</string>
    <string name="speed">Time must be greater than zero</string>
    <string name="Distance">Distance and time are required</string>
</resources>