<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101010"
    android:hapticFeedbackEnabled="false"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="410dp"
        android:layout_height="265dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1000:625"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/speed_meter" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="SPEED CALCULATOR"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Enterdistance"
        android:layout_width="219dp"
        android:layout_height="37dp"
        android:layout_marginBottom="8dp"
        android:background="#FDFDFD"
        android:ems="10"
        android:hint="@string/enter_distance_meter"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/Entertime"
        app:layout_constraintEnd_toEndOf="@+id/Entertime"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Entertime" />

    <EditText
        android:id="@+id/Entertime"
        android:layout_width="220dp"
        android:layout_height="32dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/enter_time_second"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/cear"
        app:layout_constraintEnd_toEndOf="@+id/calculate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cear" />

    <Button
        android:id="@+id/cear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:background="#FFFFFF"
        android:text="@string/cear"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/calculate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.556" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:background="#FDFCFC"
        android:text="@string/calcurator"
        app:layout_constraintBottom_toBottomOf="@+id/cear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cear"
        app:layout_constraintTop_toTopOf="@+id/cear"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="184dp"
        android:layout_height="35dp"
        android:layout_marginTop="48dp"
        android:text="@string/average_speed_km_h"
        android:textColor="#A51D1D"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/calculate"
        app:layout_constraintStart_toStartOf="@+id/cear"
        app:layout_constraintTop_toBottomOf="@+id/cear" />

    <TextView
        android:id="@+id/result"
        android:layout_width="180dp"
        android:layout_height="33dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/calculate"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/cear"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>